k8s/maxmorris-io-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: maxmorris-io
  name: maxmorris-io
