k8s/maxmorris-io-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxmorris-io
  namespace: maxmorris-io
  labels:
    app: maxmorris-io
spec:
  selector:
    matchLabels:
      app: maxmorris-io
  template:
    metadata:
      labels:
        app: maxmorris-io
    spec:
      containers:
        - name: site
          image: ghcr.io/m4xmorris/maxmorris.io:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
