k8s/maxmorris-io-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maxmorris-io
  namespace: maxmorris-io
  labels:
    app: maxmorris-io
spec:
  selector:
    app: maxmorris-io
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
